<resources>
    <string-array name="ExpertiseValue">
        <item> Mechanic </item>
        <item> Denter and Painter </item>
        <item> Electrician </item>
    </string-array>

    <string name="Name_app">Automobile Maintenance And Emergency Service</string>
    <string name="app_name">AMAS</string>
    <string name="app_toolbar_login">Login</string>
    <string name="value_email">Email</string>
    <string name="value_password">Password</string>
    <string name="LOGIN">Login</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="REGISTER">Register</string>
    <string name="Profile">Profile</string>
    <string name="FullName">Full Name</string>
    <string name="CNIC">CNIC</string>
    <string name="EMAIL">Email</string>
    <string name="Password">Password</string>
    <string name="Experience">Experience</string>
    <string name="basic_charges">Basic Charges</string>
    <string name="Expertise">Expertise</string>
    <string name="find_help">Find Help</string>
    <string name="workinghour">Working Hours</string>
    <string name="address">Address</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="submitButton">Submit</string>
    <string name="City">City</string>
    <string name="serviceProvider">Service Provider</string>
    <string name="serviceSeeker">Service Seeker</string>
    <string name="Home">Home</string>

    <string name="charges">Charges</string>

    <string-array name="ExperienceValue">
        <item> Less than 1 Year</item>
        <item> 1 year </item>
        <item> More than 1 Years</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Blackspace"> </string>

    <string name="please_wait_msg">Please wait...</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="please_enable_gps">Please enable GPS to get precise results</string>
    <string name="install_google_play_services">Please Install google play services to use this application</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="confirm">Confirm</string>

    <string name="google_android_map_api_key">AIzaSyAqfKI1s4DXv3zTinuvtC-Z3C24-rtwtvs</string>

    <string name="stripe_key">pk_test_51H2CC4F3aW26glmp7e8QI97fnMGqlyXMKGLs3x1dyKGF04OStxI33OOjKLIrnGoWqTA4OX008u8W9tu5xXTQWZ3k00SQCkBUOd</string>

    <string name="pick_image_intent_text">Choose Image:</string>
</resources>
